--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<p> hello, this is angular, avite </p>
-<a routerLink="/" href="#" class="text-xl font-bold no-underline hover:underline ...">Home | </a>
-<a routerLink="/about" href="#" class="text-xl font-bold no-underline hover:underline ...">About us</a>
-<hr>
+<div class="main">
+    <p> hello, this is angular, avite </p>
+    <a routerLink="/" href="#" class="text-xl font-bold no-underline hover:underline ...">Home | </a>
+    <a routerLink="/about" href="#" class="text-xl font-bold no-underline hover:underline ...">About us</a>
+    <hr>
+</div>
 <router-outlet></router-outlet>
